bbb Refactor SecurityConfig: update CORS configuration for improved security and streamline filter chain setup